--- a/source/less/components/editor.less
+++ b/source/less/components/editor.less
@@ -27,9 +27,16 @@
 
   height: 100%;
   object-fit: cover;
+  margin-bottom: 42px;
 
   @media (min-width: @tablet-width) {
     grid-row: 1/3;
+
+    margin-bottom: 0;
+  }
+
+  & img {
+    display: block;
   }
 }
 
@@ -38,7 +45,7 @@
 
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 
   margin: 0;
   margin-bottom: 38px;
@@ -53,26 +60,27 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: column;
+    align-items: flex-start;
     gap: 26px;
 
     max-width: none;
     padding-bottom: 0;
+    padding-left: 45px;
     margin-bottom: 0;
 
     border-bottom: none;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 0;
+  }
 }
 
 .editor__list-item {
-  position: absolute;
-  top: 0;
-  left: 0;
+  margin-right: 35px;
 
-  width: 100%;
-
-  &--active {
-    position: relative;
-    // width: 100%;
+  &:last-of-type {
+    margin-right: 0;
   }
 
   @media (min-width: @tablet-width) {
@@ -80,31 +88,68 @@
 
     display: flex;
 
+    width: 100%;
     padding-bottom: 24px;
+    margin-right: 0;
 
     border-bottom: 1px solid @editor-inner-border;
   }
 }
 
+.editor__list-item--active .editor__range-wrapper--active {
+  position: absolute;
+  top: 55px;
+  left: 8%;
+
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+}
+
+.editor__list-item--active .editor__tools-btn {
+  & svg {
+    fill: @coral-red;
+  }
+}
+
 .editor__tools-btn {
-  border: none;
-  background-color: none;
+  padding: 0;
 
   cursor: pointer;
+  border: none;
+  background-color: transparent;
 
-  &--fill {
-    transform: translateX(90px);
+  & svg {
+    fill: fade(@basic-font, 30%);
+  }
 
-    @media (min-width: @tablet-width) {
-      transform: none;
+  &:hover svg {
+    fill: fade(@basic-font, 50%);
+  }
+
+  &:active svg {
+    fill: @coral-red;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-right: 30px;
+
+    & svg {
+      width: 22px;
+      height: 22px;
+
+      fill: @coral-red;
     }
   }
 
-  &--contrast {
-    transform: translateX(190px);
-
-    @media (min-width: @tablet-width) {
-      transform: none;
+  @media (min-width: @tablet-width) {
+    & svg {
+      width: 44px;
+      height: 44px;
     }
   }
 }
@@ -137,7 +182,7 @@
   line-height: 18px;
   font-weight: 700;
 
-  background-color: none;
+  background-color: transparent;
   border-radius: 30px;
 
   @media (min-width: @tablet-width) {
@@ -200,13 +245,5 @@
 
   & input {
     width: 100%;
-  }
-
-  &--active {
-    display: block;
-
-    @media (min-width: @tablet-width) {
-      display: flex;
-    }
   }
 }
