--- a/source/less/components/journey.less
+++ b/source/less/components/journey.less
@@ -23,8 +23,16 @@
   line-height: 30px;
   text-align: center;
 
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+    padding-left: 65px;
+    padding-right: 65px;
+  }
+
   @media (min-width: @desktop-width) {
     margin-bottom: 84px;
+    padding-left: 202px;
+    padding-right: 202px;
   }
 }
 
@@ -40,11 +48,12 @@
     align-items: center;
 
     margin: 0 auto;
-    max-width: 940px;
+    max-width: 980px;
   }
 
   textarea {
-    margin-top: 10px;
+    display: block;
+
     width: 100%;
     padding: 22px 25px 22px 20px;
     box-sizing: border-box;
@@ -66,6 +75,8 @@
 .journey__fieldset {
   padding-top: 42px;
   padding-bottom: 44px;
+  padding-left: 0;
+  padding-right: 0;
 
   margin: 0;
   border: none;
@@ -90,6 +101,7 @@
 
   @media (min-width: @desktop-width) {
     padding-top: 15px;
+    padding-right: 37px;
   }
 }
 
@@ -123,6 +135,42 @@
   }
 }
 
+.journey__contacts-input {
+  // position: relative;
+
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+
+  //   width: 59px;
+  //   height: 59px;
+
+  //   background-color: @pricing-border-cell;
+  //   z-index: 10;
+  // }
+}
+
+.journey__contacts-icon {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 57px;
+    height: 56px;
+
+    background-color: @pricing-border-cell;
+  }
+}
+
 .journey__app {
   background-color: @background-gray;
 
@@ -130,6 +178,10 @@
     order: 2;
 
     background-color: @basic-white;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 37px;
   }
 }
 
@@ -154,8 +206,12 @@
 }
 
 .journey__button-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   @media (min-width: @tablet-width) {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     order: 6;
@@ -168,7 +224,7 @@
 
 .journey__field-list {
   margin: 0;
-  padding: 0 22px;
+  padding: 0 2px;
 
   list-style: none;
 
@@ -190,13 +246,15 @@
 }
 
 .journey__field-item {
+  position: relative;
+
   display: flex;
   flex-direction: column;
 
   margin-bottom: 29px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 58px;
+    margin-bottom: 56px;
   }
 
   &:last-of-type {
@@ -204,11 +262,11 @@
   }
 
   & label {
-    margin-bottom: 10px;
+    margin-bottom: 17px;
 
     color: @coral-red;
     text-transform: uppercase;
-    line-height: 30px;
+    line-height: 1;
 
     @media (min-width: @tablet-width) {
       margin-bottom: 0;
@@ -224,7 +282,7 @@
 
     font-size: 18px;
 
-    border: 2px solid @background-gray;
+    border: 2px solid @pricing-border-cell;
     outline: none;
   }
 
@@ -258,6 +316,8 @@
 
       & input {
         order: 1;
+
+        margin-bottom: 22px;
       }
     }
 
@@ -268,7 +328,7 @@
 }
 
 .journey__legend {
-  margin-bottom: 45px;
+  margin-bottom: 55px;
 
   color: @coral-red;
   line-height: 18px;
@@ -286,12 +346,17 @@
 }
 
 .journey__legend-textarea {
-  margin-bottom: 0;
+  display: block;
+  margin-bottom: 22px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
 .journey__checkbox-list {
   margin: 0;
-  padding: 0 22px;
+  padding: 0 2px;
 
   list-style: none;
 
@@ -300,14 +365,14 @@
   }
 
   @media (min-width: @desktop-width) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 47px 56px;
   }
 }
 
 .journey__checkbox-item {
-  margin-bottom: 60px;
+  margin-bottom: 69px;
 
   &:last-of-type {
     margin-bottom: 0;
@@ -318,22 +383,73 @@
     font-size: 18px;
     line-height: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+  }
+}
+
+.journey__checkbox-input {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+
+  & + label {
+    display: flex;
+    align-items: center;
+    user-select: none;
+  }
+
+  & + label::before {
+    content: "";
+    display: inline-block;
+
+    width: 35px;
+    height: 35px;
+    margin-right: 22px;
+
+    border: 2px solid @pricing-border-cell;
+    border-radius: 0.25em;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  &:checked + label::before {
+    background-image: url("../img/icon/checkbox-tick.svg");
+  }
+
+  & + label:hover::before {
+    border: 2px solid @basic-font;
+  }
+
+  & + label:active::before {
+    border: 2px solid @coral-red;
+    background-image: url("../img/icon/checkbox-tick.svg");
+  }
 }
 
 .journey__radio-list {
   margin: 0;
-  padding: 0 22px;
+  padding: 0 2px;
 
   list-style: none;
 
   @media (min-width: @tablet-width) {
     padding: 0 60px;
   }
+
+  @media (min-width: @tablet-width) {
+    padding: 0 74px;
+  }
 }
 
 .journey__radio-item {
+  margin-bottom: 62px;
 
-  margin-bottom: 50px;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 38px;
+  }
 
   &:last-of-type {
     margin-bottom: 0;
@@ -346,8 +462,73 @@
   }
 }
 
+.journey__radio-input {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+
+  & + label {
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    user-select: none;
+  }
+
+  & + label::before {
+    content: "";
+
+    width: 37px;
+    height: 37px;
+    margin-right: 30px;
+
+    border: 2px solid @pricing-border-cell;
+    border-radius: 50%;
+
+    background-color: @basic-white;
+  }
+
+  &:checked + label::after {
+    content: "";
+    position: absolute;
+    top: 13px;
+    left: 13px;
+
+    width: 15px;
+    height: 15px;
+
+    border-radius: 50%;
+
+    background-color: @coral-red;
+  }
+
+  & + label:hover::before {
+    border: 2px solid @basic-font;
+  }
+
+  & + label:active::before {
+    border: 2px solid @coral-red;
+  }
+
+  & + label:active::after {
+    content: "";
+    position: absolute;
+    top: 13px;
+    left: 13px;
+
+    width: 15px;
+    height: 15px;
+
+    border-radius: 50%;
+
+    background-color: @coral-red;
+  }
+}
+
 .journey__submit-button {
   margin-bottom: 46px;
+
+  max-width: 296px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
@@ -357,6 +538,7 @@
 .journey__submit-button,
 .journey__modal-button {
   width: 100%;
+  max-width: 296px;
   min-height: 63px;
   padding: 0;
 
@@ -390,6 +572,13 @@
 }
 
 .journey__modal {
+  position: relative;
+
+  max-width: 460px;
+  width: 100%;
+  margin: 0 auto;
+
+  background-color: @basic-white;
   box-shadow: 0 0 5px rgb(0 1 1 / 15%);
 }
 
@@ -397,6 +586,7 @@
 .journey__modal-wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   padding: 44px 22px 50px;
 
@@ -427,4 +617,21 @@
   padding: 50px 20px;
 
   background-color: @background-gray;
+}
+
+.modal {
+  display: none;
+}
+
+.modal--active {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
 }
