--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -40,6 +40,7 @@
   @media (min-width: @desktop-width) {
     flex-direction: column;
     padding-top: 36px;
+    padding-bottom: 59px;
   }
 }
 
@@ -105,6 +106,8 @@
 
   @media (min-width: @desktop-width) {
     order: 2;
+
+    font-size: 30px;
   }
 }
 
@@ -121,6 +124,7 @@
   @media (min-width: @desktop-width) {
     order: 3;
 
+    font-size: 18px;
     text-align: center;
   }
 }
