--- a/source/less/components/effect.less
+++ b/source/less/components/effect.less
@@ -66,6 +66,8 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 47px;
+
+    font-size: 18px;
   }
 }
 
@@ -73,4 +75,8 @@
   display: block;
 
   color: @coral-red;
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+  }
 }
