--- a/source/less/components/pricing.less
+++ b/source/less/components/pricing.less
@@ -184,17 +184,25 @@
     margin: 0;
     margin-bottom: 15px;
 
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     line-height: 1;
     text-transform: uppercase;
+
+    @media (min-width: @desktop-width) {
+      font-size: 18px;
+    }
   }
 
   p:first-of-type {
     margin: 0;
 
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 300;
+
+    @media (min-width: @desktop-width) {
+      font-size: 24px;
+    }
   }
 }
 
