--- a/source/less/components/slider-list.less
+++ b/source/less/components/slider-list.less
@@ -12,6 +12,7 @@
   width: 6px;
   height: 6px;
   padding: 0;
+  margin-right: 19px;
   box-sizing: content-box;
 
   background-color: @slider-btn;
@@ -21,6 +22,10 @@
 
   &:hover {
     background-color: @slider-btn-hover;
+  }
+
+  &:last-of-type {
+    margin-right: 0;
   }
 }
 
