--- a/source/less/components/journey.less
+++ b/source/less/components/journey.less
@@ -153,9 +153,13 @@
     justify-content: center;
 
     width: 57px;
-    height: 56px;
+    height: 55px;
 
     background-color: @pricing-border-cell;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 56px;
   }
 }
 
