--- a/source/less/components/intro.less
+++ b/source/less/components/intro.less
@@ -1,7 +1,7 @@
 .intro {
   color: @basic-white;
   background-color: @bg-dark-blue;
-  background-image: url("../img/backgrounds/back-mobile.jpg");
+  background-image: url("../img/backgrounds/back-tablet.jpg");
   background-position: 50% 0;
   background-size: 100% 462px;
   background-repeat: no-repeat;
@@ -10,12 +10,22 @@
     background-image: url("../img/backgrounds/back-tablet.jpg");
     background-position: 50% 0;
     background-size: cover;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/backgrounds/back-tablet@2x.jpg");
+      background-size: 1200px auto;
+    }
   }
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/backgrounds/back-desktop.jpg");
     background-position: 50% 0;
     background-size: cover;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/backgrounds/back-desktop@2x.jpg");
+      background-size: cover auto;
+    }
   }
 }
 
@@ -88,16 +98,21 @@
 
 .intro__screen {
   position: absolute;
-  top: 99px;
+  top: 81px;
   left: 0;
 
-  width: 280px;
+  width: 320px;
   height: 286px;
 
   background-image: url("../img/backgrounds/phone-bg-mobile.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 50%;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/backgrounds/phone-bg-mobile@2x.png");
+    background-size: 320px 286px;
+  }
 
   @media (min-width: @tablet-width) {
     width: 660px;
@@ -106,15 +121,25 @@
     left: -20px;
 
     background-image: url("../img/backgrounds/phone-bg-tablet.png");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/backgrounds/phone-bg-tablet@2x.png");
+      background-size: 660px 545px;
+    }
   }
 
   @media (min-width: @desktop-width) {
     width: 1050px;
     height: 645px;
-    top: 3px;
+    top: 2px;
     left: 0;
 
     background-image: url("../img/backgrounds/phone-bg-desktop.png");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/backgrounds/phone-bg-desktop@2x.png");
+      background-size: 1050px 645px;
+    }
   }
 }
 
