--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -57,6 +57,12 @@
   }
 }
 
+.catalog__label-wrapper {
+  position: relative;
+
+  z-index: 5;
+}
+
 .catalog__label {
   position: absolute;
   top: 0;
@@ -66,18 +72,14 @@
   justify-content: center;
   align-items: center;
 
-  max-width: 140px;
-  max-height: 36px;
-  width: 100%;
-  height: 100%;
-
-  box-sizing: border-box;
-
+  padding: 14px 20px;
   margin: 0;
+  box-sizing: border-box;
 
   color: @basic-white;
   font-size: 12px;
   font-weight: 700;
+  line-height: 1;
 
   background-color: @coral-red;
 
@@ -181,7 +183,6 @@
 
   @media (min-width: @tablet-width) {
     justify-content: space-between;
-    align-items: center;
   }
 
   &--panorama {
