--- a/source/less/components/pricing.less
+++ b/source/less/components/pricing.less
@@ -138,7 +138,7 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
   }
 
   & > p {
