--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,5 +1,6 @@
 @font-face {
   font-family: "Open Sans";
+  font-display: swap;
   src:
     url("../fonts/opensans.woff") format("woff"),
     url("../fonts/opensans.woff2") format("woff2");
@@ -9,6 +10,7 @@
 
 @font-face {
   font-family: "Open Sans";
+  font-display: swap;
   src:
     url("../fonts/opensansbold.woff") format("woff"),
     url("../fonts/opensansbold.woff2") format("woff2");
@@ -18,6 +20,7 @@
 
 @font-face {
   font-family: "Open Sans";
+  font-display: swap;
   src:
     url("../fonts/opensanslight.woff") format("woff"),
     url("../fonts/opensanslight.woff2") format("woff2");
