--- a/source/less/global/varialbles.less
+++ b/source/less/global/varialbles.less
@@ -22,3 +22,13 @@
 @button-green: #2AAB6D;
 @button-green-hover: #1C9B5E;
 @check-mark-green: #3DC644;
+
+@editor-gray: #B5BABE;
+@editor-gray-dark: #8D949B;
+
+@logo-active: #627481;
+
+@menue-fade: #55224E;
+
+@slider-gray: #7E868F;
+@slider-pale: rgb(233, 235, 236);
