--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -1,12 +1,12 @@
 .advantages {
-  background: linear-gradient(-4deg, @background-gray 94%, @basic-white 50%);
+  background: linear-gradient(-6deg, @background-gray 94%, @basic-white 50%);
 
   @media (min-width: @tablet-width) {
-    background: linear-gradient(-5deg, @background-gray 90%, @basic-white 50%);
+    background: linear-gradient(-5deg, @background-gray 92%, @basic-white 50%);
   }
 
   @media (min-width: @desktop-width) {
-    background: linear-gradient(-5deg, @background-gray 81%, @basic-white 50%);
+    background: linear-gradient(-5deg, @background-gray 88%, @basic-white 50%);
   }
 }
 
@@ -27,20 +27,17 @@
   box-sizing: border-box;
   overflow: hidden;
 
-  // background: @background-gray;
-
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: flex-end;
 
-    padding-top: 103px;
-    padding-bottom: 49px;
+    padding-top: 78px;
+    padding-bottom: 28px;
   }
 
   @media (min-width: @desktop-width) {
     flex-direction: column;
-    padding-top: 36px;
-    padding-bottom: 59px;
+    padding: 16px 43px 50px;
   }
 }
 
@@ -49,6 +46,7 @@
 
   margin: 0;
   padding: 0;
+  padding-top: 20px;
 
   list-style: none;
 
@@ -62,6 +60,7 @@
   @media (min-width: @desktop-width) {
     flex-direction: row;
     width: 100%;
+    padding-top: 0;
   }
 }
 
@@ -72,7 +71,7 @@
   flex-direction: column;
   align-items: center;
 
-  margin-bottom: 43px;
+  margin-bottom: 35px;
 
   &:last-of-type {
     margin-bottom: 0;
@@ -81,7 +80,7 @@
   @media (min-width: @tablet-width) {
     align-items: flex-start;
 
-    margin-bottom: 43px;
+    margin-bottom: 23px;
   }
 
   @media (min-width: @desktop-width) {
@@ -89,6 +88,7 @@
 
     margin-bottom: 0;
     margin-right: 68px;
+    width: 33%;
 
     &:last-child {
       margin-right: 0;
@@ -98,14 +98,18 @@
 
 .advantages__title {
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 15px;
 
   font-size: 18px;
   font-weight: 700;
   text-align: center;
+  line-height: 1;
 
   @media (min-width: @desktop-width) {
     order: 2;
+
+    margin-bottom: 22px;
+    padding: 0 15px;
 
     font-size: 30px;
   }
@@ -124,7 +128,9 @@
   @media (min-width: @desktop-width) {
     order: 3;
 
+    padding: 0 2px;
     font-size: 18px;
+    line-height: 30px;
     text-align: center;
   }
 }
@@ -148,13 +154,13 @@
     display: none;
 
     min-width: 157px;
-    min-height: 277px;
+    min-height: 291px;
 
     &--visible {
       display: block;
 
       min-width: 157px;
-      margin-top: 47px;
+      margin-top: 25px;
     }
   }
 
@@ -163,7 +169,7 @@
 
     order: 1;
 
-    margin-bottom: 50px;
+    margin-bottom: 58px;
     min-width: 186px;
     min-height: 300px;
     overflow: visible;
@@ -203,10 +209,10 @@
 
   @media (min-width: @tablet-width) and (max-width: @desktop-width) {
     position: absolute;
-    bottom: -109%;
-    right: 107%;
-    width: 300px;
-    height: 616px;
+    bottom: -99%;
+    right: 114%;
+    width: 268px;
+    height: 547px;
   }
 
   @media (min-width: @desktop-width) {
