--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -1,27 +1,29 @@
-// .catalog {
-
-// }
-
-// .catalog__wrapper {
-
-// }
-
 .catalog__text {
-  padding-top: 54px;
-  padding-bottom: 60px;
+  padding: 44px 34px 50px;
 
   line-height: 30px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    padding-top: 100px;
-    padding-bottom: 85px;
+    padding: 91px 50px 77px;
 
     font-size: 18px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-bottom: 97px;
+    padding: 91px 170px 89px;
+  }
+}
+
+.catalog__text--bottom {
+  padding: 43px 33px;
+
+  @media (min-width: @tablet-width) {
+    padding: 65px 33px 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 57px 33px 67px;
   }
 }
 
@@ -36,24 +38,26 @@
 .catalog__panorma-image-wrapper {
   position: relative;
 
+  display: block;
+
   max-width: 1200px;
   margin: 0 auto;
   height: auto;
+}
 
-  & img {
-    display: block;
+.catalog__panorma-image-wrapper img {
+  display: block;
 
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 
-    @media (min-width: @tablet-width) {
-      min-height: 509px;
-    }
+  @media (min-width: @tablet-width) {
+    min-height: 509px;
+  }
 
-    @media (min-width: @desktop-width) {
-      max-height: 506px;
-    }
+  @media (min-width: @desktop-width) {
+    max-height: 506px;
   }
 }
 
@@ -66,13 +70,13 @@
 .catalog__label {
   position: absolute;
   top: 0;
-  right: 5%;
+  right: 6%;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  padding: 14px 20px;
+  padding: 12px 20px;
   margin: 0;
   box-sizing: border-box;
 
@@ -84,7 +88,13 @@
   background-color: @coral-red;
 
   @media (min-width: @tablet-width) {
-    top: 10%;
+    top: 57px;
+    right: 3%;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 55px;
+    right: 2%;
   }
 }
 
@@ -124,42 +134,41 @@
   position: relative;
 
   height: 100%;
-  padding: 25px 17px 26px 10px;
+  padding: 18px 10px 18px 17px;
   background-color: @background-gray;
 
   @media (min-width: @tablet-width) {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 23px 30px 24px;
+    min-height: 155px;
+    box-sizing: border-box;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 22px 27px 24px;
+  }
+
+  &--panorama {
+    min-height: fit-content;
   }
 }
 
 .catalog__image {
+  display: block;
+
   margin: 0;
+}
 
-  & img {
-    display: block;
+.catalog__image img {
+  display: block;
 
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 
-    object-fit: cover;
-
-    @media (min-width: @tablet-width) {
-      // width: 300px;
-      // height: 300px;
-    }
-
-    @media (min-width: @desktop-width) {
-      // width: 300px;
-      // height: 400px;
-    }
-  }
+  object-fit: cover;
 }
 
 .catalog__name {
   display: block;
-
-  margin-bottom: 10px;
 }
 
 .catalog__time {
@@ -170,7 +179,15 @@
 
 .catalog__comment {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 11px;
+
+  &--panorama {
+    margin-bottom: 11px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .catalog__like-wrapper {
@@ -188,8 +205,13 @@
   &--panorama {
     @media (min-width: @tablet-width) {
       position: absolute;
-      top: 19%;
+      top: 21%;
       right: 5%;
+    }
+
+    @media (min-width: @tablet-width) {
+      top: 23px;
+      right: 28px;
     }
   }
 }
@@ -211,6 +233,10 @@
     order: 2;
 
     margin-left: 16px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-right: 3px;
   }
 }
 
