--- a/source/less/components/contacts.less
+++ b/source/less/components/contacts.less
@@ -1,25 +1,22 @@
-// .contacts {
-// }
-
 .contacts__wrapper {
-  padding-top: 50px;
-  padding-bottom: 20px;
+  padding-top: 42px;
+  padding-bottom: 105px;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    padding-top: 55px;
-    padding-bottom: 30px;
+    padding-top: 45px;
+    padding-bottom: 21px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 74px;
-    padding-bottom: 26px;
+    padding-top: 59px;
+    padding-bottom: 20px;
   }
 }
 
 .contacts__slogan {
   margin: 0;
-  margin-bottom: 45px;
+  margin-bottom: 36px;
 
   font-size: 24px;
   font-weight: 300;
@@ -27,14 +24,16 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 51px;
+    margin-bottom: 33px;
+    padding: 0 25px;
 
     font-size: 40px;
     line-height: 54px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 61px;
+    margin-bottom: 40px;
+    padding: 0 110px;
 
     font-size: 50px;
     line-height: 68px;
@@ -57,21 +56,21 @@
   }
 
   @media (min-width: @desktop-width) {
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 }
 
 .contacts__list-item {
   text-align: center;
 
-  margin-bottom: 41px;
+  margin-bottom: 19px;
 
   &:last-of-type {
     margin-bottom: 0;
   }
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 55px;
+    margin-bottom: 43px;
     width: 100%;
     max-width: 50%;
   }
@@ -79,48 +78,72 @@
   @media (min-width: @desktop-width) {
     margin-bottom: 0;
     width: auto;
+    max-width: 33%;
 
-    &:first-of-type {
+    &:nth-of-type(2) {
       margin-right: 0;
     }
 
     &--phone {
       order: 1;
+
+      margin-left: 47px;
     }
 
     &--email {
       order: 3;
+
+      margin-left: 45px;
     }
 
     &--address {
       order: 2;
+
+      margin-left: 62px;
     }
   }
+}
 
-  & h3 {
-    margin: 0;
-    margin-bottom: 13px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 24.51px;
+.contacts__list-item h3 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24.51px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 4px;
   }
 
-  & a {
-    font-size: 24px;
-    font-weight: 300;
-    line-height: 32.68px;
-    color: @coral-red;
-
-    text-decoration: none;
+  @media (min-width: @desktop-width) {
+    margin-bottom: 21px;
   }
+}
 
-  & a:hover {
+.contacts__list-item a {
+  display: block;
+
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 32.68px;
+  color: @coral-red;
+
+  text-decoration: none;
+
+  &:hover {
     color: @basic-font;
     text-decoration: underline;
   }
 
-  & a:active {
+  &:active {
     color: @slider-btn;
     text-decoration: none;
+  }
+}
+
+.contacts__list-item span {
+  @media (min-width: @tablet-width) {
+    display: block;
+
+    padding: 0 10px;
   }
 }
