--- a/source/less/components/feedback.less
+++ b/source/less/components/feedback.less
@@ -1,31 +1,36 @@
-// .feedback {
-// }
-
 .feedback__wrapper {
   position: relative;
 
-  padding-top: 50px;
-  padding-bottom: 30px;
+  padding-top: 45px;
+  padding-bottom: 15px;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    padding-top: 95px;
+    padding-top: 90px;
     padding-bottom: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 75px;
+    padding-bottom: 10px;
   }
 }
 
 .feedback__list {
   margin: 0;
   padding: 0;
-  margin-bottom: 47px;
+  margin-bottom: 20px;
 
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 27px;
+  }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 0;
   }
 }
-
 
 .feedback__list-item {
   display: flex;
@@ -35,23 +40,20 @@
   text-align: center;
 }
 
-// .feedback__list-item--current {
-// }
-
 .feedback__qoutes-img {
   display: none;
 
   @media (min-width: @desktop-width) {
     display: block;
 
-    margin-bottom: 58px;
+    margin-bottom: 47px;
   }
 }
 
 .feedback__title {
   display: block;
 
-  margin-bottom: 31px;
+  margin-bottom: 15px;
 
   font-size: 18px;
   font-weight: 700;
@@ -60,6 +62,12 @@
     order: 2;
 
     margin-bottom: 0;
+
+    font-size: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 24px;
   }
 }
 
@@ -72,6 +80,13 @@
 
   @media (min-width: @tablet-width) {
     display: block;
+
+    padding-top: 5px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+    padding-top: 8px;
   }
 }
 
@@ -81,7 +96,7 @@
   line-height: 30px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 51px;
+    margin-bottom: 39px;
 
     font-size: 18px;
   }
