--- a/source/less/components/footer.less
+++ b/source/less/components/footer.less
@@ -6,20 +6,29 @@
   flex-direction: column;
   align-items: center;
 
-  padding-top: 40px;
+  padding-top: 36px;
   padding-bottom: 40px;
+  min-height: 284px;
 
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: space-between;
+
+    padding-top: 30px;
+    min-height: 127px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 25px;
+    min-height: 197px;
   }
 }
 
 .footer__logo-wrapper {
   margin: 0;
-  margin-bottom: 41px;
+  margin-bottom: 38px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
@@ -78,13 +87,14 @@
 .footer__social-list {
   display: flex;
   margin: 0;
-  margin-bottom: 41px;
+  margin-bottom: 37px;
   padding: 0;
 
   list-style: none;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
+    padding-top: 6px;
   }
 }
 
@@ -93,6 +103,14 @@
 
   &:last-of-type {
     margin-right: 0;
+
+    @media (min-width: @tablet-width) {
+      margin-right: 10px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-right: 0;
+    }
   }
 }
 
@@ -103,9 +121,19 @@
 
   width: 48px;
   height: 48px;
+  margin-right: -4px;
+  margin-top: 3px;
 
   border: 3px solid @footer-social-border;
   border-radius: 50%;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 5px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 0;
+  }
 
   &:hover {
     border: 3px solid @basic-font;
@@ -124,25 +152,32 @@
 
   line-height: 18px;
 
-  & span {
-    margin-right: 15px;
+  @media (min-width: @tablet-width) {
+    padding-top: 6px;
   }
 
-  &:hover .footer__copyright-link {
-    & svg {
-      fill: @basic-font;
-    }
+  @media (min-width: @desktop-width) {
+    padding-top: 10px;
   }
 
-  &:active .footer__copyright-link {
-    & svg {
-      fill: fade(@basic-font, 30%);
-    }
+  &:hover .footer__copyright-link svg {
+    fill: @basic-font;
+  }
+
+  &:active .footer__copyright-link svg {
+    fill: @editor-gray;
   }
 }
 
-.footer__copyright-link {
-  & svg {
-    fill: @coral-red;
+.footer__copyright span {
+  margin-right: 15px;
+
+  @media (min-width: @desktop-width) {
+    margin-right: 13px;
+    font-size: 18px;
   }
+}
+
+.footer__copyright-link svg {
+  fill: @coral-red;
 }
