--- a/source/less/components/header.less
+++ b/source/less/components/header.less
@@ -17,7 +17,15 @@
   background-color: @basic-font;
 
   @media (min-width: @desktop-width) {
-    background-color: transparent;
+    background-color: @background-header;
+  }
+}
+
+.header--opened .header__wrapper {
+  min-height: 69px;
+
+  @media (min-width: @tablet-width) {
+    min-height: 110px;
   }
 }
 
@@ -56,7 +64,7 @@
   }
 
   &:active {
-    fill: fade(@basic-white, 30%);
+    fill: @logo-active;
   }
 }
 
@@ -79,5 +87,11 @@
 .header__logo--desktop {
   @media (min-width: @desktop-width) {
     display: block;
+  }
+}
+
+.header__logo-wrapper {
+  @media (min-width: @tablet-width) {
+    padding-bottom: 15px;
   }
 }
