--- a/source/less/components/journey.less
+++ b/source/less/components/journey.less
@@ -1,20 +1,16 @@
-// .journey {
-
-// }
-
 .journey__wrapper {
-  padding-top: 54px;
-  padding-bottom: 26px;
+  padding-top: 45px;
+  padding-bottom: 24px;
 
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    padding-top: 100px;
-    padding-bottom: 50px;
+    padding-top: 91px;
+    padding-bottom: 46px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 100px;
+    padding-top: 91px;
     padding-bottom: 0;
   }
 }
@@ -30,9 +26,17 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 84px;
-    padding-left: 202px;
-    padding-right: 202px;
+    padding-bottom: 16px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
+
+.journey__form-text span {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: inline-block;
   }
 }
 
@@ -45,41 +49,54 @@
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    align-items: center;
+    align-items: flex-start;
 
     margin: 0 auto;
     max-width: 980px;
   }
+}
 
-  textarea {
-    display: block;
+.journey__form textarea {
+  display: block;
 
-    width: 100%;
-    padding: 22px 25px 22px 20px;
-    box-sizing: border-box;
+  width: 100%;
+  max-height: 201px;
+  padding: 13px 25px 22px 20px;
+  box-sizing: border-box;
 
-    color: @basic-font;
+  color: @basic-font;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+
+  border: 2px solid @background-gray;
+  outline: none;
+
+  &::placeholder {
+    font-family: "Open Sans", "Arial", "Helvetica", sans-serif;
     font-size: 18px;
-    line-height: 30px;
-    text-align: center;
+  }
 
-    border: 2px solid @background-gray;
-    outline: none;
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
 
-    &::placeholder {
-      font-family: "Open Sans", "Arial", "Helvetica", sans-serif;
-      font-size: 18px;
-    }
+    padding: 16px 21px 22px 16px;
 
-    @media (min-width: @tablet-width) {
-      margin-top: 0;
-    }
+    max-height: 194px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-height: 124px;
+    padding: 11px 21px 22px 16px;
+
+    text-align: left;
   }
 }
 
+
 .journey__fieldset {
-  padding-top: 42px;
-  padding-bottom: 44px;
+  padding-top: 43px;
+  padding-bottom: 42px;
   padding-left: 0;
   padding-right: 0;
 
@@ -99,14 +116,19 @@
   @media (min-width: @tablet-width) {
     order: 1;
 
-    & fieldset {
-      border: 0;
-    }
+    padding-top: 29px;
+    padding-bottom: 16px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 15px;
+    padding-top: 27px;
     padding-right: 37px;
+  }
+}
+
+.journey__full-name fieldset {
+  @media (min-width: @tablet-width) {
+    border: 0;
   }
 }
 
@@ -116,11 +138,26 @@
   @media (min-width: @tablet-width) {
     order: 4;
 
+    padding-top: 22px;
+
     background-color: @basic-white;
   }
 
   @media (min-width: @desktop-width) {
     grid-column: 1/-1;
+
+    padding-top: 35px;
+  }
+}
+
+.journey__achievements .journey__fieldset {
+  @media (min-width: @tablet-width) {
+    padding-bottom: 48px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 42px;
+    padding-top: 31px;
   }
 }
 
@@ -128,15 +165,26 @@
   @media (min-width: @tablet-width) {
     order: 3;
 
-    padding-top: 46px;
+    padding-top: 59px;
     padding-bottom: 37px;
   }
 
   @media (min-width: @desktop-width) {
     grid-column: 1/-1;
 
-    padding-top: 44px;
+    padding-top: 0;
     padding-bottom: 23px;
+  }
+}
+
+.journey__contacts .journey__fieldset {
+  @media (min-width: @tablet-width) {
+    padding-top: 36px;
+    padding-bottom: 35px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 20px;
   }
 }
 
@@ -152,8 +200,8 @@
     align-items: center;
     justify-content: center;
 
-    width: 57px;
-    height: 55px;
+    width: 59px;
+    height: 59px;
 
     background-color: @pricing-border-cell;
   }
@@ -170,26 +218,41 @@
 
   @media (min-width: @desktop-width) {
     padding-left: 37px;
+    padding-top: 56px;
+  }
+}
+
+.journey__app .journey__fieldset {
+  @media (min-width: @tablet-width) {
+    padding-bottom: 51px;
   }
 }
 
 .journey__emotions {
+  padding-bottom: 5px;
+
   @media (min-width: @tablet-width) {
     order: 5;
 
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 58px;
+    padding-bottom: 66px;
   }
 
   @media (min-width: @desktop-width) {
     grid-column: 1/-1;
   }
+}
 
-  & fieldset {
-    @media (min-width: @tablet-width) {
-      padding-left: 60px;
-      padding-right: 60px;
-    }
+.journey__emotions fieldset {
+  @media (min-width: @tablet-width) {
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-bottom: 52px;
+    padding-top: 35px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 45px;
   }
 }
 
@@ -221,6 +284,10 @@
   }
 
   &--contacts {
+    @media (min-width: @tablet-width) {
+      padding: 0 58px;
+    }
+
     @media (min-width: @desktop-width) {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -233,105 +300,123 @@
   }
 }
 
+.journey__field-list--contacts label {
+  @media (min-width: @tablet-width) {
+    padding-left: 19px;
+  }
+}
+
+.journey__field-list--full-name .journey__field-item {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 52px;
+  }
+}
+
 .journey__field-item {
   position: relative;
 
   display: flex;
   flex-direction: column;
 
-  margin-bottom: 29px;
+  margin-bottom: 25px;
 
   @media (min-width: @tablet-width) {
+    flex-direction: row;
+    align-items: center;
+
     margin-bottom: 56px;
   }
 
   &:last-of-type {
     margin-bottom: 0;
   }
+}
 
-  & label {
+.journey__field-item--contacts {
+  margin-bottom: 22px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    margin-bottom: 38px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+  }
+}
+
+.journey__field-item--contacts label {
+  @media (min-width: @tablet-width) {
+    order: 2;
+  }
+}
+
+.journey__field-item--contacts input {
+  @media (min-width: @tablet-width) {
+    order: 1;
+
     margin-bottom: 17px;
-
-    color: @coral-red;
-    text-transform: uppercase;
-    line-height: 1;
-
-    @media (max-width: @mobile-width-only) {
-      padding-left: 22px;
-    }
-
-    @media (min-width: @tablet-width) {
-      margin-bottom: 0;
-      margin-right: 20px;
-    }
   }
+}
 
-  & input {
-    width: 100%;
-    min-height: 59px;
-    padding-left: 20px;
-    box-sizing: border-box;
+.journey__field-item label {
+  margin-bottom: 13px;
 
-    font-size: 18px;
+  color: @coral-red;
+  text-transform: uppercase;
+  line-height: 1;
 
-    border: 2px solid @pricing-border-cell;
-    outline: none;
-  }
-
-
-  & input:hover {
-    border-color: @basic-font;
-  }
-
-  & input:focus {
-    border-color: @coral-red;
-  }
-
-  & input::placeholder {
-    color: @basic-font;
+  @media (max-width: @mobile-width-only) {
+    padding-left: 22px;
   }
 
   @media (min-width: @tablet-width) {
-    flex-direction: row;
-    align-items: center;
+    margin-bottom: 0;
+    margin-right: 20px;
+  }
+}
+
+.journey__field-item input {
+  width: 100%;
+  min-height: 63px;
+  padding-left: 20px;
+  box-sizing: border-box;
+
+  font-size: 18px;
+
+  border: 2px solid @pricing-border-cell;
+  outline: none;
+
+  &:hover {
+    border-color: @basic-font;
   }
 
-  &--contacts {
-    @media (min-width: @tablet-width) {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
+  &:focus {
+    border-color: @coral-red;
+  }
 
-      & label {
-        order: 2;
-      }
-
-      & input {
-        order: 1;
-
-        margin-bottom: 22px;
-      }
-    }
-
-    @media (min-width: @desktop-width) {
-      margin-bottom: 0;
-    }
+  &::placeholder {
+    color: @basic-font;
   }
 }
 
 .journey__legend {
-  margin-bottom: 55px;
+  margin-bottom: 34px;
+  padding: 0 15px;
 
   color: @coral-red;
   line-height: 18px;
   text-align: center;
   text-transform: uppercase;
 
-  transform: translateY(45px);
+  transform: translateY(40px);
 
   @media (min-width: @tablet-width) {
     padding: 0 25px;
-    margin-bottom: 0;
+    margin: 0 auto;
 
     transform: none;
   }
@@ -343,12 +428,23 @@
   }
 }
 
-.journey__legend-textarea {
-  display: block;
-  margin-bottom: 22px;
+.journey__legend--app {
+  margin-bottom: 29px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
+  }
+}
+
+.journey__legend-textarea {
+  display: block;
+  margin-bottom: 8px;
+
+  transform: translateY(35px);
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+    transform: none;
   }
 }
 
@@ -364,22 +460,17 @@
 
   @media (min-width: @desktop-width) {
     display: grid;
+    align-items: center;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 47px 56px;
   }
 }
 
 .journey__checkbox-item {
-  margin-bottom: 69px;
+  margin-bottom: 43px;
 
   &:last-of-type {
     margin-bottom: 0;
-  }
-
-  & label {
-    color: @basic-font;
-    font-size: 18px;
-    line-height: 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -387,44 +478,53 @@
   }
 }
 
-.journey__checkbox-input {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
+.journey__checkbox-item label {
+  color: @basic-font;
+  font-size: 18px;
+  line-height: 30px;
+}
 
-  & + label {
-    display: flex;
-    align-items: center;
-    user-select: none;
-  }
+.journey__checkbox-input:checked + label::before {
+  background-image: url("../img/icon/checkbox-tick.svg");
+}
 
-  & + label::before {
-    content: "";
-    display: inline-block;
 
-    width: 35px;
-    height: 35px;
+.journey__checkbox-input + label {
+  display: flex;
+  align-items: center;
+  user-select: none;
+}
+
+.journey__checkbox-input + label::before {
+  content: "";
+  display: inline-block;
+
+  width: 35px;
+  height: 35px;
+  margin-right: 18px;
+
+  border: 2px solid @pricing-border-cell;
+  border-radius: 0.25em;
+  background-color: @basic-white;
+  background-repeat: no-repeat;
+  background-position: center center;
+
+  @media (min-width: @desktop-width) {
     margin-right: 22px;
-
-    border: 2px solid @pricing-border-cell;
-    border-radius: 0.25em;
-
-    background-repeat: no-repeat;
-    background-position: center center;
   }
+}
 
-  &:checked + label::before {
-    background-image: url("../img/icon/checkbox-tick.svg");
-  }
+.journey__checkbox-input:focus + label::before {
+  border: 2px solid @basic-font;
+}
 
-  & + label:hover::before {
-    border: 2px solid @basic-font;
-  }
+.journey__checkbox-input + label:hover::before {
+  border: 2px solid @basic-font;
+}
 
-  & + label:active::before {
-    border: 2px solid @coral-red;
-    background-image: url("../img/icon/checkbox-tick.svg");
-  }
+.journey__checkbox-input + label:active::before {
+  border: 2px solid @coral-red;
+  background-image: url("../img/icon/checkbox-tick.svg");
 }
 
 .journey__radio-list {
@@ -434,58 +534,33 @@
   list-style: none;
 
   @media (min-width: @tablet-width) {
-    padding: 0 60px;
+    padding: 0 58px;
   }
 
-  @media (min-width: @tablet-width) {
-    padding: 0 74px;
+  @media (min-width: @desktop-width) {
+    padding: 0 70px;
   }
 }
 
 .journey__radio-item {
-  margin-bottom: 62px;
+  margin-bottom: 35px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 38px;
+    margin-bottom: 35px;
   }
 
   &:last-of-type {
     margin-bottom: 0;
   }
+}
 
-  & label {
-    color: @basic-font;
-    font-size: 18px;
-    line-height: 30px;
-  }
+.journey__radio-item label {
+  color: @basic-font;
+  font-size: 18px;
+  line-height: 30px;
 }
 
 .journey__radio-input {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-
-  & + label {
-    position: relative;
-
-    display: flex;
-    align-items: center;
-    user-select: none;
-  }
-
-  & + label::before {
-    content: "";
-
-    width: 37px;
-    height: 37px;
-    margin-right: 30px;
-
-    border: 2px solid @pricing-border-cell;
-    border-radius: 50%;
-
-    background-color: @basic-white;
-  }
-
   &:checked + label::after {
     content: "";
     position: absolute;
@@ -500,31 +575,60 @@
     background-color: @coral-red;
   }
 
-  & + label:hover::before {
+  &:focus + label::before {
     border: 2px solid @basic-font;
-  }
-
-  & + label:active::before {
-    border: 2px solid @coral-red;
-  }
-
-  & + label:active::after {
-    content: "";
-    position: absolute;
-    top: 13px;
-    left: 13px;
-
-    width: 15px;
-    height: 15px;
-
-    border-radius: 50%;
-
-    background-color: @coral-red;
   }
 }
 
+.journey__radio-input + label {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  user-select: none;
+}
+
+.journey__radio-input + label::before {
+  content: "";
+
+  width: 37px;
+  height: 37px;
+  margin-right: 27px;
+
+  border: 2px solid @pricing-border-cell;
+  border-radius: 50%;
+
+  background-color: @basic-white;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 20px;
+  }
+}
+
+.journey__radio-input + label:hover::before {
+  border: 2px solid @basic-font;
+}
+
+.journey__radio-input + label:active::before {
+  border: 2px solid @coral-red;
+}
+
+.journey__radio-input + label:active::after {
+  content: "";
+  position: absolute;
+  top: 13px;
+  left: 13px;
+
+  width: 15px;
+  height: 15px;
+
+  border-radius: 50%;
+
+  background-color: @coral-red;
+}
+
 .journey__submit-button {
-  margin-bottom: 46px;
+  margin-bottom: 38px;
 
   max-width: 296px;
 
@@ -534,7 +638,7 @@
 }
 
 .journey__submit-button,
-.journey__modal-button {
+.journey-modal__button {
   width: 100%;
   max-width: 296px;
   min-height: 63px;
@@ -577,7 +681,8 @@
   }
 }
 
-.journey__modal {
+.journey-modal {
+  display: none;
   position: relative;
 
   max-width: 460px;
@@ -585,11 +690,24 @@
   margin: 0 auto;
 
   background-color: @basic-white;
+  border-radius: 6px;
   box-shadow: 0 0 5px rgb(0 1 1 / 15%);
+
+  @media (min-width: @desktop-width) {
+    max-width: 760px;
+  }
+}
+
+.journey-modal--failure {
+  display: block;
+}
+
+.journey-modal--sent {
+  display: block;
 }
 
 
-.journey__modal-wrapper {
+.journey-modal__wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -597,26 +715,41 @@
   padding: 44px 22px 50px;
 
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 46px 82px 54px;
+  }
 }
 
-.journey__modal-headline {
+.journey-modal__headline {
   margin: 0;
-  margin-bottom: 37px;
+  margin-bottom: 20px;
+
+  font-size: 18px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 18px;
+    margin-bottom: 21px;
+
+    font-size: 30px;
+    line-height: 40px;
+  }
 }
 
-.journey__modal-text {
+.journey-modal__text {
   margin: 0;
   margin-bottom: 48px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+  }
 
   &--compact {
     margin-bottom: 0;
   }
 }
 
-// .journey__modal-button {
-// }
-
-.journey__modal-button-wrapper {
+.journey-modal__button-wrapper {
   display: flex;
   justify-content: center;
 
