--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -53,33 +53,6 @@
   border-top: 1px solid @header-border-top;
   border-bottom: 1px solid @basic-black;
 
-  & a {
-    display: block;
-
-    padding: 25px 0;
-    box-sizing: border-box;
-
-    color: @basic-white;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-
-    &:hover {
-      color: @coral-red;
-    }
-
-    &:active {
-      color: @coral-red-active;
-    }
-
-    @media (min-width: @desktop-width) {
-      &:active {
-        color: @basic-white;
-        opacity: 0.3;
-      }
-    }
-  }
-
   @media (min-width: @desktop-width) {
     margin-right: 79px;
     background-color: none;
@@ -91,6 +64,40 @@
   }
 }
 
+.main-nav__list-item a {
+  display: block;
+
+  padding: 23px 0;
+  box-sizing: border-box;
+
+  color: @basic-white;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 1;
+
+  &:hover {
+    color: @coral-red;
+  }
+
+  &:active {
+    color: @coral-red-active;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 22px 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-transform: none;
+
+    &:active {
+      color: @basic-white;
+      opacity: 0.3;
+    }
+  }
+}
+
 .main-nav__list-item--active {
   @media (min-width: @desktop-width) {
     position: relative;
@@ -98,7 +105,7 @@
     &::after {
       position: absolute;
       right: 0;
-      bottom: 0;
+      bottom: 10px;
       left: 0;
       height: 2px;
       background: @basic-white;
@@ -118,7 +125,7 @@
 .main-nav__toggle {
   position: relative;
 
-  height: 24px;
+  height: 30px;
   width: 50px;
   padding: 0;
 
@@ -135,15 +142,15 @@
   content: "";
 
   position: absolute;
-  top: 5px;
+  top: 2px;
   left: 0;
 
   width: 50px;
-  height: 3px;
+  height: 4px;
 
   background-color: @basic-white;
   border-radius: 3px;
-  box-shadow: 0 8px 0 0 @basic-white, 0 16px 0 0 @basic-white;
+  box-shadow: 0 9px 0 0 @basic-white, 0 18px 0 0 @basic-white;
 }
 
 .main-nav--closed .main-nav__toggle:hover::before {
@@ -152,16 +159,16 @@
 }
 
 .main-nav--closed .main-nav__toggle:active::before {
-  background-color: fade(@coral-red, 30%);
+  background-color: @menue-fade;
   box-shadow:
-    0 8px 0 0 fade(@coral-red, 30%),
-    0 16px 0 0 fade(@coral-red, 30%);
+    0 8px 0 0 @menue-fade,
+    0 16px 0 0 @menue-fade;
 }
 
 .main-nav--opened .main-nav__toggle {
-  top: 0;
+  top: 3px;
   right: auto;
-  left: 0;
+  left: -4px;
 
   &::before,
   &::after {
@@ -171,7 +178,7 @@
     top: 9px;
     left: 30px;
 
-    width: 21px;
+    width: 25px;
     height: 3px;
     background-color: @basic-white;
   }
@@ -192,7 +199,7 @@
 
   &:active::before,
   &:active::after {
-    background-color: fade(@coral-red, 30%);
+    background-color: @menue-fade;
   }
 }
 
