--- a/source/less/components/main-slogan.less
+++ b/source/less/components/main-slogan.less
@@ -3,19 +3,19 @@
 }
 
 .main-slogan__wrapper {
-  padding-top: 46px;
-  padding-bottom: 30px;
+  padding-top: 42px;
+  padding-bottom: 10px;
   box-sizing: border-box;
 
   background-color: @basic-white;
 
   @media (min-width: @tablet-width) {
-    padding-top: 58px;
-    padding-bottom: 47px;
+    padding-top: 47px;
+    padding-bottom: 10px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 77px;
+    padding-top: 65px;
     padding-bottom: 36px;
   }
 }
@@ -33,12 +33,35 @@
     font-size: 40px;
     line-height: 54px;
 
-    br {
-      display: none;
+    & span {
+      display: inline-block;
+      padding: 0 5px;
     }
   }
 
+  @media (min-width: @desktop-width) {
+    font-size: 50px;
+    line-height: 1.3;
+  }
+}
+
+.main-slogan__text br {
   @media (min-width: @tablet-width) {
-    padding: 0 60px;
+    display: none;
+  }
+}
+
+.main-slogan__text span {
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+    padding: 0 5px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: block;
+
+    padding: 0 91px;
+
+    line-height: 1.4;
   }
 }
