--- a/source/less/components/map.less
+++ b/source/less/components/map.less
@@ -2,19 +2,43 @@
   position: relative;
 
   width: 100%;
-  max-height: 502px;
+  height: 100%;
   margin: 0 auto;
 
   overflow: hidden;
 
-  & iframe {
-    display: block;
+  @media (max-width: @mobile-width-only) {
+    max-height: 200px;
+  }
 
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
+  @media (min-width: @tablet-width) {
+    max-height: 374px;
+  }
 
-    border: none;
+  @media (min-width: @desktop-width) {
+    max-height: 502px;
+  }
+}
+
+.map__wrapper iframe {
+  display: block;
+
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+
+  border: none;
+
+  @media (max-width: @mobile-width-only) {
+    max-height: 135px;
+  }
+
+  @media (min-width: @tablet-width) {
+    max-height: 374px;
+  }
+
+  @media (min-width: @tablet-width) {
+    max-height: 502px;
   }
 }
 
@@ -34,6 +58,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    height: 112px;
+    height: 135px;
+    left: 15px;
   }
 }
